changement global de l'organisation du projet, amélioration des tests